# photo-mecha-battle

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/rules/: testing.md
.github/workflows/: android.yml  ios.yml
clients/android/: README.md  build.gradle.kts  settings.gradle.kts
clients/ios/: README.md  project.yml
config/: po_pending_decisions.json  revenuecat_pending_setup.json
config/phase0/: mecha_bird_lora.toml
docs/: 00_root_overview.md  01_game_concept_and_loop.md  02_photo_object_extraction.md  03_mech_generation_and_stats.md  04_tactics.md  05_team_and_battle.md  06_monetization_and_fairness.md  07_platform_and_system.md  08_mvp_and_roadmap.md  09_lightweight_server_architecture.md  10_mobile_image_generation_survey.md  11_mobile_client_design.md  12_environments.md  13_build_and_device_verification.md
scripts/: android_dev.sh  demo_battle.py  generate_golden_features.py  mvp_flow.py  vertical_slice.py
scripts/diag/: diag_mech_i2i.py  diag_mech_i2i.sh  diag_mecha_lora_phase0a.sh
scripts/phase0/: README.md  (+2 more)
tests/: conftest.py  test_api.py  test_api_errors.py  test_battle.py  test_battle_extended.py  test_battle_log_serde.py  test_damage_scaling.py  test_database.py  test_db_path.py  test_diag_mech_i2i.py  test_form_inference.py  test_golden_features.py  test_lora_dataset.py  test_mech_direct_registration.py  test_mech_stats.py  test_models.py  test_mvp_capture.py  test_phase2.py  test_revenuecat_webhook.py  test_store.py  test_tactics.py  test_tactics_serde.py  test_vision.py
web/: app.js  index.html  style.css
(+92 files in other folders)
