[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo-mecha-battle"
version = "0.1.0"
description = "Photo-based mecha auto-battle game engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.32"]
dev = ["pytest>=8.0", "fastapi>=0.115", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/photo_mecha_battle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
