[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photo-mecha-battle"
version = "0.1.0"
description = "Photo-based mecha auto-battle game engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.32", "python-multipart>=0.0.9"]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "fastapi>=0.115", "httpx>=0.27", "python-multipart>=0.0.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/photo_mecha_battle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=photo_mecha_battle --cov-branch --cov-report=term-missing --cov-report=json"

[tool.coverage.run]
branch = true
source = ["photo_mecha_battle"]

[tool.coverage.report]
show_missing = true
